--- a/docs/ADR/adr-002-dynamic-committee.mdx
+++ b/docs/ADR/adr-002-dynamic-committee.mdx
@@ -17,7 +17,7 @@ Done
 
 Several validators, acting as observers, form the signing committee. The purpose of this committee is to represent the vault owner across multiple external chains, eliminating a single point of failure through its distributed nature. Each member of the committee possesses a private share used during the signing process. Along with that, the committee has its public key. The public key is used to verify the signature is the same public key that corresponds to the original signing committee. This public key is known to everyone who needs to verify the signatures and is derived during the initial setup of the scheme.
 
-![tss\_committee](/docs/assets/images/tss_committee-b2314e886d31c8ac3dcbdd97a25cdba7.png)
+![tss\_committee](./docs/assets/images/tss_committee-b2314e886d31c8ac3dcbdd97a25cdba7.png)
 
 ### Pool public key[​](#pool-public-key "Direct link to Pool public key")
 
@@ -25,7 +25,7 @@ In a Threshold Signature Scheme (TSS), generating the public key without any sin
 
 Essentially, the pool public key is a cryptographic public key that can be represented as the address associated with any blockchain that uses public keys as addresses. This ensures that the committee is recognized as the owner of the vault operating across different chains.
 
-![pool\_public\_key](/docs/assets/images/pool_public_key-e5abd67d873da4854053a97588f644a2.png)
+![pool\_public\_key](./docs/assets/images/pool_public_key-e5abd67d873da4854053a97588f644a2.png)
 
 ### Validator rotation[​](#validator-rotation "Direct link to Validator rotation")
 
@@ -48,7 +48,7 @@ Validator rotation is triggered by a governance proposal. The proposal specifies
 11. The vault migration involves a TSS-signed transfer of all tokens from the old vault to the new one. This transfer should be signed using the old pool public key.
 12. Once the transfer is complete, the observer sets the new key as active, stops the halt, and continues observing from the next block.
 
-![keygen](/docs/assets/images/key_generation-3560bff13b825554ee9e464e2939cc3e.png)
+![keygen](./docs/assets/images/key_generation-3560bff13b825554ee9e464e2939cc3e.png)
 
 ### MsgKeyGen[​](#msgkeygen "Direct link to MsgKeyGen")
 
