--- a/docs/ADR/adr-005-ordinals.mdx
+++ b/docs/ADR/adr-005-ordinals.mdx
@@ -112,11 +112,11 @@ The approach is the same as for the usual BTC bridging.
 
 ### Inbound transfer[​](#inbound-transfer "Direct link to Inbound transfer")
 
-![inbound](/docs/assets/images/inbound_transfer-315a374625d0390e8f30394860286280.png)
+![inbound](./docs/assets/images/inbound_transfer-315a374625d0390e8f30394860286280.png)
 
 ### Outbound transfer[​](#outbound-transfer "Direct link to Outbound transfer")
 
-![outbound](/docs/assets/images/outbound_transfer-db5b2ec6ba89988379f7c374395e2008.png)
+![outbound](./docs/assets/images/outbound_transfer-db5b2ec6ba89988379f7c374395e2008.png)
 
 ## Steps to implement[​](#steps-to-implement "Direct link to Steps to implement")
 
