--- a/docs/ADR/adr-006-metrics.mdx
+++ b/docs/ADR/adr-006-metrics.mdx
@@ -63,7 +63,7 @@ Use [this template](https://grafana.com/grafana/dashboards/16846-aptos-validator
 
 6. Prometheus (Hetzner): [prometheus-ui](http://95.217.153.1:9099/graph)
 
-Architecture: ![monitoring\_architecture](/docs/assets/images/monitoring_architecture-ae0e60e1e6a53c710706d8c114332736.png)
+Architecture: ![monitoring\_architecture](./docs/assets/images/monitoring_architecture-ae0e60e1e6a53c710706d8c114332736.png)
 
 ## Metrics overview[​](#metrics-overview "Direct link to Metrics overview")
 
