--- a/docs/ADR/adr-009-blockchain-explorer.mdx
+++ b/docs/ADR/adr-009-blockchain-explorer.mdx
@@ -147,7 +147,7 @@ Top most used block explorers offered by the Cosmos ecosystem: [https://cosmos.n
          * Hasura: a GraphQL API that serves data to the frontend.
 
      * Scheme:
-       * ![image](/docs/assets/images/big_dipper_architecture-f0db14abb4d0bb95ac45af45a1fbfa01.png)
+       * ![image](./docs/assets/images/big_dipper_architecture-f0db14abb4d0bb95ac45af45a1fbfa01.png)
 
 ### Comparative Table of Blockchain Explorers[​](#comparative-table-of-blockchain-explorers "Direct link to Comparative Table of Blockchain Explorers")
 
