--- a/docs/ADR/adr-010-node-ungrades.mdx
+++ b/docs/ADR/adr-010-node-ungrades.mdx
@@ -31,4 +31,4 @@ Resources:
 
 ## Architecture Diagram[​](#architecture-diagram "Direct link to Architecture Diagram")
 
-![node\_upgrades\_architecture](/docs/assets/images/node_upgrades_architecture-4c14dca7c5e070dd343b13b569fbfebf.png)
+![node\_upgrades\_architecture](./docs/assets/images/node_upgrades_architecture-4c14dca7c5e070dd343b13b569fbfebf.png)
