--- a/docs/ADR/adr-011-superfluid-staking.mdx
+++ b/docs/ADR/adr-011-superfluid-staking.mdx
@@ -19,15 +19,15 @@ Superfluid staking, also known as **"Proof of Useful Staking"** allows holders t
 
 **Staking**
 
-![img.png](/docs/assets/images/staking-05aa0e6c1e0cf09debb58536767bbaf7.png)
+![img.png](./docs/assets/images/staking-05aa0e6c1e0cf09debb58536767bbaf7.png)
 
 **Liquid Staking**
 
-![img.png](/docs/assets/images/liquid_staking-38b7da4a736cd02c4c03a7a20df26598.png)
+![img.png](./docs/assets/images/liquid_staking-38b7da4a736cd02c4c03a7a20df26598.png)
 
 **Superfluid Staking**
 
-![img.png](/docs/assets/images/superfluid_staking-3d6dbc26afb9a82f307cc1c6c041b025.png)
+![img.png](./docs/assets/images/superfluid_staking-3d6dbc26afb9a82f307cc1c6c041b025.png)
 
 ## How-to Process:[​](#how-to-process "Direct link to How-to Process:")
 
