--- a/docs/ADR/adr-012-ton-integration.mdx
+++ b/docs/ADR/adr-012-ton-integration.mdx
@@ -113,7 +113,7 @@ Create and execute gov proposal with the `MsgCreateAsset` message
 3. TON smart contract waits for the confirmation count threshold
 4. TON smart contract updates internal signers list to the new one
 
-![flow](/docs/assets/images/adr012_inbound_outbound_flow-bc979fa04819dfb4a48938e22c3a960a.png)
+![flow](./docs/assets/images/adr012_inbound_outbound_flow-bc979fa04819dfb4a48938e22c3a960a.png)
 
 ## Steps to implement[​](#steps-to-implement "Direct link to Steps to implement")
 
