--- a/docs/comparisons/Int3face-THOR-Zeta.mdx
+++ b/docs/comparisons/Int3face-THOR-Zeta.mdx
@@ -28,11 +28,11 @@ On this page
 
 ### CCMP success[​](#ccmp-success "Direct link to CCMP success")
 
-![success](/docs/assets/images/zetachain_success-Successful_Contract_Call-af7e4d75d6c0e4787a0ca044f6fc3416.png)
+![success](./docs/assets/images/zetachain_success-Successful_Contract_Call-af7e4d75d6c0e4787a0ca044f6fc3416.png)
 
 ### CCMP failure[​](#ccmp-failure "Direct link to CCMP failure")
 
-![failure](/docs/assets/images/zetachain_failure-Failed_Contract_Call-2d90cffce50b549a01d1a16598c0470d.png)
+![failure](./docs/assets/images/zetachain_failure-Failed_Contract_Call-2d90cffce50b549a01d1a16598c0470d.png)
 
 ## Comparison Table[​](#comparison-table "Direct link to Comparison Table")
 
