--- a/docs/comparisons/tBTC-iBTC-nBTC-tech.mdx
+++ b/docs/comparisons/tBTC-iBTC-nBTC-tech.mdx
@@ -9,7 +9,7 @@ On this page
 
 # tBTC Main Components Diagram
 
-![1](/docs/assets/images/tbtc_components-493a4be7125e5d1988a972b221a34ac4.png)
+![1](./docs/assets/images/tbtc_components-493a4be7125e5d1988a972b221a34ac4.png)
 
 To start the tBTC node validator needs:
 
@@ -27,7 +27,7 @@ To start the tBTC node validator needs:
 
 # iBTC Main Components Diagram
 
-![2](/docs/assets/images/ibtc_components-c61f8f0aacfb3817e0f8f1fd37fa3dd9.png)
+![2](./docs/assets/images/ibtc_components-c61f8f0aacfb3817e0f8f1fd37fa3dd9.png)
 
 To start the iBTC node validator needs:
 
@@ -59,7 +59,7 @@ Estimated recommended hardware to run a single iBTC node: 8 vCPU / 64 GB RAM / 1
 
 In total - \~8 minutes (41 ETH blocks)
 
-![1](/docs/assets/images/tbtc_signature_timeline-c7d87369d15d911e72223b745b262c66.png)
+![1](./docs/assets/images/tbtc_signature_timeline-c7d87369d15d911e72223b745b262c66.png)
 
 In case of signature failure - next attempt will be performed after 41 block window. Maximum is 5 signing attempts. Worst case scenario - signature will take 205 blocks or \~40 minutes on ETH
 
@@ -73,18 +73,18 @@ In case of signature failure - next attempt will be performed ASAP. We have a to
 
 ## Inbound transfer[​](#inbound-transfer "Direct link to Inbound transfer")
 
-![2](/docs/assets/images/tbtc_inbound_timeline-e52119dae6556bcf938c7273a5eefcf9.png)
+![2](./docs/assets/images/tbtc_inbound_timeline-e52119dae6556bcf938c7273a5eefcf9.png)
 
 ## Outbound transfer[​](#outbound-transfer "Direct link to Outbound transfer")
 
-![3](/docs/assets/images/tbtc_outbound_timeline-2b4473040111f57550d9f4f02a3712d6.png)
+![3](./docs/assets/images/tbtc_outbound_timeline-2b4473040111f57550d9f4f02a3712d6.png)
 
 # iBTC complete timeline
 
 ## Inbound transfer[​](#inbound-transfer-1 "Direct link to Inbound transfer")
 
-![4](/docs/assets/images/ibtc_inbound_timeline-39abc892d8790c7e13d6396d23a85fdd.png)
+![4](./docs/assets/images/ibtc_inbound_timeline-39abc892d8790c7e13d6396d23a85fdd.png)
 
 ## Outbound transfer[​](#outbound-transfer-1 "Direct link to Outbound transfer")
 
-![5](/docs/assets/images/ibtc_outbound_timeline-196cc6e2616cf77d4b1144365b334dad.png)
+![5](./docs/assets/images/ibtc_outbound_timeline-196cc6e2616cf77d4b1144365b334dad.png)
