--- a/docs/comparisons/tBTC-iBTC-nBTC.mdx
+++ b/docs/comparisons/tBTC-iBTC-nBTC.mdx
@@ -11,7 +11,7 @@ On this page
 
 tBTC is a decentralized bridge between Bitcoin and Ethereum, enabling Bitcoin holders to access DeFi and the expanding Web3 universe without relying on intermediaries. It allows users to bridge their Bitcoin assets securely and without the need for trust in third parties.
 
-![tbtc\_arch](/docs/assets/images/tbtc_arch-cd7fd901ded2436b471e54836f5cccac.png)
+![tbtc\_arch](./docs/assets/images/tbtc_arch-cd7fd901ded2436b471e54836f5cccac.png)
 
 ## Components[​](#components "Direct link to Components")
 
@@ -65,7 +65,7 @@ tBTC is a decentralized bridge between Bitcoin and Ethereum, enabling Bitcoin ho
 
 Nomic BTC is a Bitcoin sidechain based on the Tendermint consensus protocol, enabling the development of decentralized networks which coordinate to manage reserves of Bitcoin, allowing for custom application code and smart contracts which use Bitcoin as the native currency.
 
-![nbtc\_arch](/docs/assets/images/nbtc_arch-a405f9076548e111432336d6f715b48a.png)
+![nbtc\_arch](./docs/assets/images/nbtc_arch-a405f9076548e111432336d6f715b48a.png)
 
 ## Components[​](#components-1 "Direct link to Components")
 
@@ -113,7 +113,7 @@ Transaction on the BTC chain which spends from the current "reserve script" inco
 
 iBTC facilitates cross-chain asset transfers between Int3face and various external chains to enable decentralized cross-chain asset transfers, seamlessly connecting Int3face with other blockchain ecosystems.
 
-![ibtc\_arch](/docs/assets/images/ibtc_arch-b0254ce2c9e58cc8f030c4cbe85a6bf2.png)
+![ibtc\_arch](./docs/assets/images/ibtc_arch-b0254ce2c9e58cc8f030c4cbe85a6bf2.png)
 
 ## Components[​](#components-2 "Direct link to Components")
 
