--- a/docs/demos/doge/doge_inbound_outbound.mdx
+++ b/docs/demos/doge/doge_inbound_outbound.mdx
@@ -35,7 +35,7 @@ We will use the address `int31nx72wqe9js9n0tvk9c2w4zwgwv6kecp0n4zllt`
 int3faced q bank balances int31nx72wqe9js9n0tvk9c2w4zwgwv6kecp0n4zllt
 ```
 
-![init\_balance](/docs/assets/images/init_balance-cb7d9420be2fefa3a49550e805ce5aaa.png)
+![init\_balance](./docs/assets/images/init_balance-cb7d9420be2fefa3a49550e805ce5aaa.png)
 
 3. Select an UTXO to spend
 
@@ -43,7 +43,7 @@ int3faced q bank balances int31nx72wqe9js9n0tvk9c2w4zwgwv6kecp0n4zllt
 dogecoin-cli listunspent 
 ```
 
-![list\_unspent](/docs/assets/images/list_unspent-b432897e408ddfcf2b15bca5c706fa5b.png)
+![list\_unspent](./docs/assets/images/list_unspent-b432897e408ddfcf2b15bca5c706fa5b.png)
 
 If you don't see any UTXO available, mine a block to receive the rewards `dogecoin-cli generate 1`, and run `listunspent` command again.
 
@@ -61,11 +61,24 @@ If you don't see any UTXO available, mine a block to receive the rewards `dogeco
 * Add `data` entry with the hex encoded recipient address
   * Encode `int31nx72wqe9js9n0tvk9c2w4zwgwv6kecp0n4zllt` at the (online converter)\[https\://www\.rapidtables.com/convert/number/ascii-to-hex.html]
 
-```
-vins='[    {        "txid": "c4a12ff2916393d4a05ca446ab03d8cdf706dd6eb9b5d62eb8ab82cb08a01602",        "vout": 0    }]'vouts='{    "mtjLBcip4TAy7kSEsVoYKK5zvz1YY1Zy4F": 100000.0,    "mzd3LWrYrBD2qqiKwCcetReLtNC9Sfcr3j": 399999.0,    "data": "696E7433316E783732777165396A73396E3074766B39633277347A77677776366B656370306E347A6C6C74"}'dogecoin-cli createrawtransaction "$vins" "$vouts"
+```sh
+vins='[
+    {
+        "txid": "c4a12ff2916393d4a05ca446ab03d8cdf706dd6eb9b5d62eb8ab82cb08a01602",
+        "vout": 0
+    }
+]'
+
+vouts='{
+    "mtjLBcip4TAy7kSEsVoYKK5zvz1YY1Zy4F": 100000.0,
+    "mzd3LWrYrBD2qqiKwCcetReLtNC9Sfcr3j": 399999.0,
+    "data": "696E7433316E783732777165396A73396E3074766B39633277347A77677776366B656370306E347A6C6C74"
+}'
+
+dogecoin-cli createrawtransaction "$vins" "$vouts"
 ```
 
-![raw\_transaction](/docs/assets/images/raw_transaction-390e2fd584e41dc428694389a31fcd15.png)
+![raw\_transaction](./docs/assets/images/raw_transaction-390e2fd584e41dc428694389a31fcd15.png)
 
 5. We can verify that the transaction is correct
 
@@ -73,7 +86,7 @@ vins='[    {        "txid": "c4a12ff2916393d4a05ca446ab03d8cdf706dd6eb9b5d62eb8a
 dogecoin-tx -regtest -json "$raw_tx"
 ```
 
-![decoded\_raw\_transaction](/docs/assets/images/decoded_raw_transaction-7f06a7d6c23be5a21154a87078210dc3.png)
+![decoded\_raw\_transaction](./docs/assets/images/decoded_raw_transaction-7f06a7d6c23be5a21154a87078210dc3.png)
 
 6. Sign the transaction
 
@@ -81,7 +94,7 @@ dogecoin-tx -regtest -json "$raw_tx"
 dogecoin-cli signrawtransaction $raw_tx
 ```
 
-![signed\_tx](/docs/assets/images/signed_transaction-972fd91f474a138230b8ceafb88ae002.png)
+![signed\_tx](./docs/assets/images/signed_transaction-972fd91f474a138230b8ceafb88ae002.png)
 
 7. Broadcast signed transaction to the DOGE
 
@@ -89,7 +102,7 @@ dogecoin-cli signrawtransaction $raw_tx
 dogecoin-cli sendrawtransaction $signed_tx
 ```
 
-![send\_doge\_transaction](/docs/assets/images/send_doge_transaction-17d9bebaea539f27f03dbd1b736c63f3.png)
+![send\_doge\_transaction](./docs/assets/images/send_doge_transaction-17d9bebaea539f27f03dbd1b736c63f3.png)
 
 8. Generate a block to include our transaction in the chain
 
@@ -105,7 +118,7 @@ Now the transaction should be observed by the Observer and sent to the Int3face 
 int3faced q bank balances int31nx72wqe9js9n0tvk9c2w4zwgwv6kecp0n4zllt
 ```
 
-![inbound\_balance](/docs/assets/images/inbound_balance-8520ee05b4bbc657d270cd700777f795.png) Now, we can see DOGE tokens in our wallet.
+![inbound\_balance](./docs/assets/images/inbound_balance-8520ee05b4bbc657d270cd700777f795.png) Now, we can see DOGE tokens in our wallet.
 
 ## Outbound Transfer[​](#outbound-transfer "Direct link to Outbound Transfer")
 
@@ -113,8 +126,9 @@ Lets send some of our tokens back from Int3face to DOGE.
 
 1. Generate a new DOGE address
 
-```
-dogecoin-cli getnewaddressmsJf78psekNDSaQwCA2qhYypJqVPWaCCAg
+```sh
+dogecoin-cli getnewaddress
+msJf78psekNDSaQwCA2qhYypJqVPWaCCAg
 ```
 
 2. Request an outbound transfer from the bridge module
@@ -123,7 +137,7 @@ dogecoin-cli getnewaddressmsJf78psekNDSaQwCA2qhYypJqVPWaCCAg
 int3faced tx bridge outbound-transfer msJf78psekNDSaQwCA2qhYypJqVPWaCCAg dogecoin-doge 5000000000000 --from doge_test
 ```
 
-![outbound\_transaction](/docs/assets/images/outbound_transaction-14d638f95725bb1a1f081691b515371d.png)
+![outbound\_transaction](./docs/assets/images/outbound_transaction-14d638f95725bb1a1f081691b515371d.png)
 
 3. We can check our balance again to see that DOGE tokens in Int3face were burt
 
@@ -131,7 +145,7 @@ int3faced tx bridge outbound-transfer msJf78psekNDSaQwCA2qhYypJqVPWaCCAg dogecoi
 int3faced q bank balances int31nx72wqe9js9n0tvk9c2w4zwgwv6kecp0n4zllt
 ```
 
-![outbound\_balance](/docs/assets/images/outbound_balance-3e8d3edc1db093d8018b7b6f0b9cdadb.png)
+![outbound\_balance](./docs/assets/images/outbound_balance-3e8d3edc1db093d8018b7b6f0b9cdadb.png)
 
 4. Generate a block in DOGE to include transaction from the vault
 
@@ -145,4 +159,4 @@ dogecoin-cli generate 1
 dogecoin-cli listunspent 1 9999999 '["msJf78psekNDSaQwCA2qhYypJqVPWaCCAg"]'
 ```
 
-![outbound\_doge\_balance](/docs/assets/images/outbound_doge_balance-d31d0daa0605ff6f8f0e41fc4b443dae.png) Now, we can see DOGE tokens in our wallet.
+![outbound\_doge\_balance](./docs/assets/images/outbound_doge_balance-d31d0daa0605ff6f8f0e41fc4b443dae.png) Now, we can see DOGE tokens in our wallet.
