--- a/docs/demos/ton/ton_inbound_outbound.mdx
+++ b/docs/demos/ton/ton_inbound_outbound.mdx
@@ -36,8 +36,12 @@ This repository contains cli tool that allows to communicate with the bridge con
 
 1. Create new wallet in Int3face or use existing wallet
 
-```
-# Create new walletint3faced keys add "$your_key_name"# List existing walletsint3faced keys list
+```shell
+# Create new wallet
+int3faced keys add "$your_key_name"
+
+# List existing wallets
+int3faced keys list
 ```
 
 We will use address `int3104s3nrdvh2d33p53gyzy5sczcep2dkmagpvhrk`
@@ -48,14 +52,15 @@ We will use address `int3104s3nrdvh2d33p53gyzy5sczcep2dkmagpvhrk`
 int3faced q bank balances int3104s3nrdvh2d33p53gyzy5sczcep2dkmagpvhrk
 ```
 
-![init\_balance](/docs/assets/images/testnet_init_balance-05cee720985c20312f3392baa31c84a5.png)
+![init\_balance](./docs/assets/images/testnet_init_balance-05cee720985c20312f3392baa31c84a5.png)
 
 3. Go to the `ton-bridge` folder
 
 4. Set env variables with the TON wallet mnemonic and version
 
-```
-export WALLET_MNEMONIC="spare throw guide income fade burst regular ranch fence basket frown security upset faith stay time recipe random exhaust admit leader undo soup muscle"export WALLET_VERSION=v3r2
+```shell
+export WALLET_MNEMONIC="spare throw guide income fade burst regular ranch fence basket frown security upset faith stay time recipe random exhaust admit leader undo soup muscle"
+export WALLET_VERSION=v3r2
 ```
 
 5. Send deposit transaction to the TON bridge contract
@@ -71,7 +76,7 @@ npx blueprint run
 * Enter Int3face destination address `int3104s3nrdvh2d33p53gyzy5sczcep2dkmagpvhrk`
 * Wait for deposit completion
 
-![deposit\_completed](/docs/assets/images/testnet_deposit_completed-2ecf396f978d4bc4fec723f25ba80825.png)
+![deposit\_completed](./docs/assets/images/testnet_deposit_completed-2ecf396f978d4bc4fec723f25ba80825.png)
 
 Now the transaction should be observed by the Observer and sent to the Int3face chain.
 
@@ -83,7 +88,7 @@ We should see that TON tokens were minted to our wallet.
 int3faced q bank balances int3104s3nrdvh2d33p53gyzy5sczcep2dkmagpvhrk
 ```
 
-![updated\_balance](/docs/assets/images/testnet_updated_balance-15050c634873ce401d660289dfe0123a.png)
+![updated\_balance](./docs/assets/images/testnet_updated_balance-15050c634873ce401d660289dfe0123a.png)
 
 ## Outbound Transfer[​](#outbound-transfer "Direct link to Outbound Transfer")
 
@@ -93,11 +98,15 @@ We will use `EQBnAShkO0i9XeRgGwf84NhGbb3_onAZXnUYo5MzaBh07_z8` address as a reci
 
 1. Execute outbound transfer request for the x/bridge
 
-```
-int3faced tx bridge outbound-transfer EQBnAShkO0i9XeRgGwf84NhGbb3_onAZXnUYo5MzaBh07_z8 ton-ton 100000000 --from int3face-node-114 --chain-id int3-test-2...txhash: 3E9CAA41D7ACE30E6A286D921647C8304C28CA01AC97925E36BFAF9FFD626223...
+```shell
+int3faced tx bridge outbound-transfer EQBnAShkO0i9XeRgGwf84NhGbb3_onAZXnUYo5MzaBh07_z8 ton-ton 100000000 --from int3face-node-114 --chain-id int3-test-2
+
+...
+txhash: 3E9CAA41D7ACE30E6A286D921647C8304C28CA01AC97925E36BFAF9FFD626223
+...
 ```
 
-![execute\_outbound](/docs/assets/images/testnet_execute_outbound-019949583c4e0fbc2e65aab43d24707b.png)
+![execute\_outbound](./docs/assets/images/testnet_execute_outbound-019949583c4e0fbc2e65aab43d24707b.png)
 
 3. Lets check that our tx is successful in the Int3face
 
@@ -105,10 +114,10 @@ int3faced tx bridge outbound-transfer EQBnAShkO0i9XeRgGwf84NhGbb3_onAZXnUYo5MzaB
 int3faced q tx EBA98D0CDF77700BDC0096E03CB013A2FA5D72945E3B2239CCF0ED69A50EE16C
 ```
 
-![outbound\_result](/docs/assets/images/testnet_outbound_result-db7b379bd1fab67830d586e098a5bcf5.png)
+![outbound\_result](./docs/assets/images/testnet_outbound_result-db7b379bd1fab67830d586e098a5bcf5.png)
 
 4. We can verify the transfer in the [TON explorer](https://testnet.tonviewer.com/kQBnAShkO0i9XeRgGwf84NhGbb3_onAZXnUYo5MzaBh070d2)
 
-![recipient\_balance](/docs/assets/images/testnet_recipient_balance-b9a57b516524ecfc2f51b37ded9e4eec.png)
+![recipient\_balance](./docs/assets/images/testnet_recipient_balance-b9a57b516524ecfc2f51b37ded9e4eec.png)
 
 We should see an incoming transfer there
