--- a/docs/ADR/adr-004-solana-integration.mdx
+++ b/docs/ADR/adr-004-solana-integration.mdx
@@ -40,7 +40,7 @@ The flow should be pretty straightforward:
 3. The Solana smart contract waits for the confirmation count threshold
 4. The Solana smart contract releases the tokens to the recipient's address
 
-![flow](/docs/assets/images/adr004_inbound_outbound_flow-a0e53e8d6ee96cda779ff9c127078bde.png)
+![flow](./docs/assets/images/adr004_inbound_outbound_flow-a0e53e8d6ee96cda779ff9c127078bde.png)
 
 ### Solana smart-contract/Vault[​](#solana-smart-contractvault "Direct link to Solana smart-contract/Vault")
 
