--- a/docs/ADR/adr-013-rate-limiting.mdx
+++ b/docs/ADR/adr-013-rate-limiting.mdx
@@ -90,7 +90,7 @@ There are two methods for managing quarantined assets:
 * Simply storing the queue in the state. Here, if rate limits are exceeded, the coins are added to the state queue without minting. Upon release, the tokenfactory's Mint function is called for the relevant addresses.
 * Minting all coins to a special **quarantine** address (not the destination address) immediately after finalization. The coins are then transferred to their intended addresses upon release following a governance proposal. This method still requires the state queue, but operations are based solely on straightforward transfers. It also offers a transparent view of the **quarantine**, represented by a dedicated **quarantine** vault on Int3face.
 
-![quarantine](/docs/assets/images/quarantine-e9ed906f64712730aab51ec82e47eecc.png)
+![quarantine](./docs/assets/images/quarantine-e9ed906f64712730aab51ec82e47eecc.png)
 
 For **quarantining**, a queue is utilized instead of a map to allow sequential execution of transfers and to potentially filter out malicious transactions. To better understand the difference, consider the following example.
 
