--- a/docs/demos/mainnet/transfers/doge-transfers-example.mdx
+++ b/docs/demos/mainnet/transfers/doge-transfers-example.mdx
@@ -18,15 +18,15 @@ On this page
 
 2. **Select Currency** Choose the currency you want to transfer.
 
-   ![img.png](/docs/assets/images/select-currency-a039af8da29174b154354721d7e4407f.png)
+   ![img.png](./docs/assets/images/select-currency-a039af8da29174b154354721d7e4407f.png)
 
 3. **Connect with XDEFI** Click the "Connect with XDEFI" button.
 
-   ![img.png](/docs/assets/images/connect-with-xdefi-42e31353ccf78cd6c4393f548b7caa78.png)
+   ![img.png](./docs/assets/images/connect-with-xdefi-42e31353ccf78cd6c4393f548b7caa78.png)
 
 4. **XDEFI Wallet Connected** Your XDEFI wallet is now connected.
 
-   ![img.png](/docs/assets/images/xdefi-wallet-connected-bbd8d06385600a42a47463ed12b2fd99.png)
+   ![img.png](./docs/assets/images/xdefi-wallet-connected-bbd8d06385600a42a47463ed12b2fd99.png)
 
 5. **Input Transfer Details** Now you can send DOGE tokens from your address. The following fields should be filled:
 
@@ -36,19 +36,19 @@ On this page
 
 6. **Submit the Transfer** Fill out the fields and click the 'Transfer' button.
 
-   ![img.png](/docs/assets/images/fill-out-and-transfer-989ebb69fc557fb85ec4d6710ecf392d.png)
+   ![img.png](./docs/assets/images/fill-out-and-transfer-989ebb69fc557fb85ec4d6710ecf392d.png)
 
 7. **Approve the Transfer** XDEFI wallet will show a confirmation window. Click 'Approve'.
 
-   ![img.png](/docs/assets/images/approve-transfer-c532dc33efc65c820ef7b067e94ab8e5.png)
+   ![img.png](./docs/assets/images/approve-transfer-c532dc33efc65c820ef7b067e94ab8e5.png)
 
 8. **Check Transaction Status** Open the 'Activity' tab in XDEFI wallet to monitor the transaction. Ensure the correct chain is selected.
 
-   ![img.png](/docs/assets/images/xdefi-wallet-activity-647c07460a1a41de69d7998382cfe6b4.png)
+   ![img.png](./docs/assets/images/xdefi-wallet-activity-647c07460a1a41de69d7998382cfe6b4.png)
 
 9. **Verify on Explorer** Visit the Int3face Ping.Pub Explorer to verify your transaction. You can check your int3face address and see the transaction history [here](http://95.217.153.1/explorer/int3face-1/account/%7Byour_int3face_address%7D).
 
-   ![img.png](/docs/assets/images/explorer-inbound-transfers-1720ac1d486ec4966bd38e9491f919ff.png)
+   ![img.png](./docs/assets/images/explorer-inbound-transfers-1720ac1d486ec4966bd38e9491f919ff.png)
 
 ***
 
@@ -101,7 +101,7 @@ On this page
 
    Tx execution result:
 
-   ![img.png](/docs/assets/images/outbound-tx-submitted-b17145b97e8c2b59d212a1a3aeba193a.png)
+   ![img.png](./docs/assets/images/outbound-tx-submitted-b17145b97e8c2b59d212a1a3aeba193a.png)
 
 4. **Check the Transaction Status**
 
@@ -158,9 +158,19 @@ On this page
 
    Example of transfer 1 IBC token (note that amount is in satoshis (\* 10^8) for DOGE and other UTXO denoms):
 
-   ```
-   int3faced tx ibc-transfer transfer \transfer \channel-0 \osmo1jssqq9mas2dg5p5x847fz0n58uqqz2nl9q9mhy \10000factory/int31zlefkpe3g0vvm9a4h0jf9000lmqutlh99h7fsd/dogecoin-doge \--from ove-validator \--chain-id int3face-1 \--fees 10000uint3 \--gas auto \--packet-timeout-height 0-10000 \--packet-timeout-timestamp 600000000000
-   ```
+   ```shell
+   int3faced tx ibc-transfer transfer \
+   transfer \
+   channel-0 \
+   osmo1jssqq9mas2dg5p5x847fz0n58uqqz2nl9q9mhy \
+   10000factory/int31zlefkpe3g0vvm9a4h0jf9000lmqutlh99h7fsd/dogecoin-doge \
+   --from ove-validator \
+   --chain-id int3face-1 \
+   --fees 10000uint3 \
+   --gas auto \
+   --packet-timeout-height 0-10000 \
+   --packet-timeout-timestamp 600000000000
+    ```
 
 4. **Verify on Mintscan Explorer**
 
@@ -170,4 +180,4 @@ On this page
 
    Navigate to the 'Transactions' tab to see the transaction details.
 
-   ![img.png](/docs/assets/images/mintscan-ibc-transactions-d57b8e7910f22af67efa3cd603302b70.png)
+   ![img.png](./docs/assets/images/mintscan-ibc-transactions-d57b8e7910f22af67efa3cd603302b70.png)
