--- a/docs/int3face/build-and-run/btc_deploy.mdx
+++ b/docs/int3face/build-and-run/btc_deploy.mdx
@@ -12,8 +12,12 @@ On this page
 
 1. Download the binaries, extract to the bin folder
 
-```
-wget https://bitcoincore.org/bin/bitcoin-core-25.0/bitcoin-25.0-x86_64-linux-gnu.tar.gztar -xzvf bitcoin-25.0-x86_64-linux-gnu.tar.gzmv bitcoin-25.0/bin/* ~/bin/rm -rf bitcoin-25.0  bitcoin-25.0-x86_64-linux-gnu.tar.gz
+```sh
+wget https://bitcoincore.org/bin/bitcoin-core-25.0/bitcoin-25.0-x86_64-linux-gnu.tar.gz
+tar -xzvf bitcoin-25.0-x86_64-linux-gnu.tar.gz
+mv bitcoin-25.0/bin/* ~/bin/
+
+rm -rf bitcoin-25.0  bitcoin-25.0-x86_64-linux-gnu.tar.gz
 ```
 
 2. Create home dir for bitcoin
@@ -25,7 +29,18 @@ mkdir ~/.bitcoin
 3. Initialize configuration file at `~/.bitcoin/bitcoin.conf`
 
 ```
-daemon=1server=1regtest=1listen=1port=18344rpcconnect=127.0.0.1rpcport=18343rpcuser=bitcoinrpcrpcpassword=CCwXB6IxXcYMlBd6w812yfmiahxYBnlR0KLlvMIjgOrGq9eqgj9WmdeTCSDVo4w9addnode=...addnode=...
+daemon=1
+server=1
+regtest=1
+listen=1
+port=18344
+rpcconnect=127.0.0.1
+rpcport=18343
+rpcuser=bitcoinrpc
+rpcpassword=CCwXB6IxXcYMlBd6w812yfmiahxYBnlR0KLlvMIjgOrGq9eqgj9WmdeTCSDVo4w9
+
+addnode=...
+addnode=...
 ```
 
 Set your own `rpcuser` and `rpcpassword`, define addresses of all other nodes in `addnode` fields. Default P2P port for regtest is `18445`
