--- a/docs/int3face/integration.mdx
+++ b/docs/int3face/integration.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Int3face Integration Quick Guide"
+title: "Integration Quick Guide"
 ---
 
 These are steps on how to use the Bi[t]fröst Int3face to bridge external tokens to other chains.
